--- a/DnsServerCore/DnsServerCore.csproj
+++ b/DnsServerCore/DnsServerCore.csproj
@@ -29,6 +29,7 @@
     <AssemblyVersion>3.3.0.0</AssemblyVersion>
     <FileVersion>3.3.0.0</FileVersion>
     <Version>3.3</Version>
+    <AssemblyName>core</AssemblyName>
   </PropertyGroup>
 
 </Project>
